--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,3 +1,12 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: shipping
+  namespace: robomart
+data:
+  CART_ENDPOINT: "{{ .Values.configMap.CART_ENDPOINT }}"
+  DB_HOST: "{{ .Values.configMap.DB_HOST }}"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
